--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ name = "zero2prod"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev-dependencies]
+reqwest = "0.11"
+
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
