--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ reqwest = "0.11"
 
 [dependencies]
 actix-web = "4"
+serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
