--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ name = "zero2prod"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
+once_cell = "1"
 reqwest = "0.11"
 
 [dependencies]
