--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ actix-web = "4"
 chrono = "0.4.15"
 config = "0.11"
 serde = { version = "1", features = ["derive"] }
+secrecy = { version = "0.8", features = ["serde"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-actix-web = "0.5"
