--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,11 +28,11 @@ tracing-actix-web = "0.5"
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
-uuid = { version = "0.8.1", features = ["v4"] }
+uuid = { version = "1.3.0", features = ["v4"] }
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
-version = "0.5.7"
+version = "0.6.3"
 default-features = false
 features = [
   "runtime-actix-rustls",
@@ -40,5 +40,6 @@ features = [
   "postgres",
   "uuid",
   "chrono",
-  "migrate"
+  "migrate",
+  "offline"
 ]
