--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ name = "zero2prod"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
+claim = "0.5"
+fake = "~2.3"
 once_cell = "1"
 reqwest = "0.11"
 
@@ -29,7 +31,9 @@ tracing-actix-web = "0.5"
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+unicode-segmentation = "1"
 uuid = { version = "1.3.0", features = ["v4"] }
+validator = "0.14"
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
