--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ name = "zero2prod"
 claim = "0.5"
 fake = "~2.3"
 once_cell = "1"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
 reqwest = "0.11"
 
 [dependencies]
