--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,16 +18,18 @@ fake = "~2.3"
 once_cell = "1"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
-reqwest = "0.11"
+serde_json = "1"
+wiremock = "0.5"
 
 [dependencies]
 actix-web = "4"
 chrono = "0.4.15"
 config = "0.11"
+reqwest = { version = "0.11" , default-features = false, features = ["json", "rustls-tls"] }
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde-aux = "3"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-actix-web = "0.5"
 tracing-bunyan-formatter = "0.3"
