--- a/configuration/production.yml
+++ b/configuration/production.yml
@@ -2,3 +2,6 @@ application:
   host: 0.0.0.0
 database:
   require_ssl: true
+email_client:
+  base_url: "https://sandbox.api.mailtrap.io"
+  sender_email: "noreply@example.com"
