--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ wiremock = "0.5"
 actix-web = "4"
 chrono = "0.4.15"
 config = "0.11"
+rand = { version = "0.8", features = ["std_rng"] }
 reqwest = { version = "0.11" , default-features = false, features = ["json", "rustls-tls"] }
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
