--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ wiremock = "0.5"
 
 [dependencies]
 actix-web = "4"
+anyhow = "1"
 chrono = "0.4.15"
 config = "0.11"
 rand = { version = "0.8", features = ["std_rng"] }
@@ -31,6 +32,7 @@ reqwest = { version = "0.11" , default-features = false, features = ["json", "ru
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde-aux = "3"
+thiserror = "1"
 tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-actix-web = "0.5"
