expect basic auth without password verification

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ wiremock = "0.5"
 [dependencies]
 actix-web = "4"
 anyhow = "1"
+base64 = "0.13"
 chrono = "0.4.15"
 config = "0.11"
 rand = { version = "0.8", features = ["std_rng"] }
