--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,13 +24,14 @@ wiremock = "0.5"
 
 [dependencies]
 actix-web = "4"
+actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
 anyhow = "1"
 argon2 = { version = "0.3", features = ["std"] }
 base64 = "0.13"
 chrono = "0.4.15"
 config = "0.11"
+hmac = { version = "0.12", features = ["std"] }
 rand = { version = "0.8", features = ["std_rng"] }
-reqwest = { version = "0.11" , default-features = false, features = ["json", "rustls-tls"] }
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde-aux = "3"
@@ -45,7 +46,11 @@ unicode-segmentation = "1"
 uuid = { version = "1.3.0", features = ["v4"] }
 validator = "0.14"
 
-# Using table-like toml syntax to avoid a super-long line!
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+features = ["json", "rustls-tls", "cookies"]
+
 [dependencies.sqlx]
 version = "0.6.3"
 default-features = false
