add redis storage

--- a/configuration/base.yml
+++ b/configuration/base.yml
@@ -13,3 +13,4 @@ email_client:
   authorization_token: "[value required]"
   inbox_id: "[value required]"
   timeout_milliseconds: 10000
+redis_uri: "redis://127.0.0.1:6379"
