--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "1"
 wiremock = "0.5"
 
 [dependencies]
+actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
 actix-web = "4"
 actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
 anyhow = "1"
