--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,6 @@ linkify = "0.8"
 once_cell = "1"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
-serde_json = "1"
 wiremock = "0.5"
 
 [dependencies]
@@ -36,6 +35,7 @@ rand = { version = "0.8", features = ["std_rng"] }
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 serde-aux = "3"
+serde_json = "1"
 thiserror = "1"
 tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
 tracing = { version = "0.1", features = ["log"] }
@@ -44,7 +44,7 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 unicode-segmentation = "1"
-uuid = { version = "1.3.0", features = ["v4"] }
+uuid = { version = "1.3.0", features = ["v4", "serde"] }
 validator = "0.14"
 
 [dependencies.reqwest]
