--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ argon2 = { version = "0.3", features = ["std"] }
 base64 = "0.13"
 chrono = "0.4.15"
 config = "0.11"
+futures = "0.3"
+futures-util = "0.3"
 hmac = { version = "0.12", features = ["std"] }
 rand = { version = "0.8", features = ["std_rng"] }
 secrecy = { version = "0.8", features = ["serde"] }
