--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ linkify = "0.8"
 once_cell = "1"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+serde_urlencoded = "0.7.1"
 wiremock = "0.5"
 
 [dependencies]
